# hand-detection

./: CMakeLists.txt  README.md  main.cpp
modules/: camera.h  handsDetector.h
