cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS})
# link_directories(${OpenCV_INCLUDE_DIRS} /home/chopx/Documents/hands_final/modules/)
add_executable( main main.cpp  ./modules/camera.h ./modules/handsDetector.h) 
# add_library(modules ./modules/camera.cpp ./modules/handsDetector.cpp ./modules/camera.hpp ./modules/handsDetector.hpp)
target_link_libraries(main ${OpenCV_LIBS} bgslibrary_core)
